<resources>
    <string name="app_name">ECO_iBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_background">Splash Screen Backgound</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="onboarding_text">Reading is a conversation. All book\'s talk but a good book listens as well.</string>
    <string name="onboarding_button_text">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_welcome_text">We\'re glad to have you back</string>
    <string name="signin_button_text">Sign In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="signin_footer1">New to iBook? <u>Set up an Account.</u></string>
    <string name="signup_welcome_text">There\'s a lot in store for you</string>
    <string name="signup_text">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="splash2_text">You\'re all set and ready to read your favourite books.</string>
    <string name="splash2_button_text">Proceed</string>
    <string name="signup_footer1_text">Have an Account? <u>Sign In.</u></string>
    <string name="categorisatio_heading_text">All Categories</string>
    <string name="all">All</string>
    <string name="biography">Biography</string>
    <string name="business">Business</string>
    <string name="children">Children</string>
    <string name="classics">Classics</string>
    <string name="comics">Comics</string>
    <string name="cookbook">Cookbook</string>
    <string name="ebook">Ebook</string>
    <string name="fantasy">Fantasy</string>
    <string name="fiction">Fiction</string>
</resources>