<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".fragments.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signin_logo_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/signin_logo_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/signin_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/signin_logo_main"
            app:layout_constraintTop_toBottomOf="@id/signin_logo_main">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/signin_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"
                android:src="@drawable/signin" />

            <ImageView
                android:id="@+id/signin_logo_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="260dp"
                android:importantForAccessibility="no"
                android:src="@drawable/signin_logo_body" />
        </RelativeLayout>

        <TextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/sign_in"
            android:textColor="@color/black_100"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/signin_imageview"
            app:layout_constraintTop_toBottomOf="@id/signin_imageview" />

        <TextView
            android:id="@+id/signin_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signin_welcome_text"
            android:textColor="@color/black_100"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/signin_imageview"
            app:layout_constraintTop_toBottomOf="@id/signin_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@id/signin_logo_main"
            app:layout_constraintTop_toBottomOf="@id/signin_welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_rounded_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="password"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="@id/signin_logo_main"
            app:layout_constraintTop_toBottomOf="@id/signin_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange_100">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_rounded_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/signin_button_text"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/signin_password" />

        <TextView
            android:id="@+id/signin_footer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:text="@string/signin_footer1"
            android:textAlignment="center"
            android:textColor="@color/black_100"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/signin_button"
            app:layout_constraintStart_toStartOf="@id/signin_button"
            app:layout_constraintTop_toBottomOf="@id/signin_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
